<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="login"
    tools:context=".BhawanLoginActivity">

    <ImageView
        android:id="@+id/bhawan_login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/bhawan_login" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Bhawan"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:background="@drawable/background_shape"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_canteen"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bhawan_login_image"
        app:layout_constraintVertical_bias="0.62" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/bhawan_password"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:background="@drawable/background_shape"
        android:backgroundTint="@color/white"
        android:hint="@string/enter_bhawan_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/bhawan_login_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bhawan_login_image"
        app:layout_constraintVertical_bias="0.729" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bhawan_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="login"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bhawan_login_image"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.862" />


</androidx.constraintlayout.widget.ConstraintLayout>